--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css">
     <title>Blocks sandbox</title>
 </head>
 <body>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
